# my-awesome-project

./: .readthedocs.yaml  pyproject.toml
docs/source/: conf.py  index.md  project_setup.md  test.md
src/: example.py
